--- a/src/Pages/Profile/style.css
+++ b/src/Pages/Profile/style.css
@@ -27,3 +27,10 @@
     height: 80px;
     width: 80px;
 }
+
+@media(max-width: 500px) {
+    #profile #profile-picture {
+        width: 100%;
+        height: auto;
+    }
+}
