--- a/src/Pages/Project/style.css
+++ b/src/Pages/Project/style.css
@@ -6,6 +6,7 @@
 
 #project .header {
     display: flex;
+    align-items: center;
 }
 
 #project .header img {
@@ -21,17 +22,29 @@
     margin: 0;
 }
 
-#project .header .url {
-    display: flex;
-    align-items: center;
-    margin: 15px 0 0 0;
+#project .header div {
     width: 100%;
 }
 
-#project .header .url svg {
-    height: 20px;
-    width: 20px;
+#project .header .info {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    font-size: 80%;
+}
+
+#project .header .info a,
+#project .header .info span {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+
+#project .header .info svg {
+    height: 15px;
+    width: 15px;
     margin-right: 5px;
+    color: #000;
 }
 
 #project .description li {
@@ -84,8 +97,17 @@
         text-align: center;
     }
 
+    #project .header .info {
+        flex-direction: column;
+        margin: 5px 0;
+    }
+
+    #project .header .info a,
+    #project .header .info span {
+        margin-right: 0;
+    }
+
     #project .header .url {
-        margin: 5px 0 0 0;
         justify-content: center;
         white-space: nowrap;
         overflow: hidden;
