--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 #root {
-  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.7)), url('/public/assets/cover.png');
+  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.7)), url('/public/assets/cover.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50%;
