--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -7,12 +7,13 @@
 }
 
 #home #name {
-    font-family: 'Futura', 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: 'Tenor Sans', 'Futura', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
     text-align: center;
-    text-transform: uppercase;
-    font-size: 50px;
+    /* text-transform: uppercase; */
+    font-size: 70px;
+    font-weight: 800;
     letter-spacing: 4px;
     color: var(--main-color);
     filter: drop-shadow(0 0 2px gray);
