--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   --secondary-color: rgb(0, 54, 4);
   --background-color: rgba(255, 255, 255, 0.8);
   --menu-background-color: rgba(255, 255, 255, 0.9);
+  --second-menu-background-color: rgba(255, 255, 255, 0.98);
+
+  --font-bold: 700;
 
   scroll-behavior: smooth;
 }
@@ -79,11 +82,12 @@ body {
 #menu-open,
 #menu-close {
   display: none;
+  z-index: 20;
 }
 
 .page {
   flex-grow: 1;
-  width: calc(100% - 40px);
+  width: calc(100% - 5vw - 20px);
   margin: 10px 0 20px 0;
   padding: 20px;
   overflow-y: auto;
@@ -217,16 +221,20 @@ ul.cols-6 li {
 @media(max-width: 500px) {
   #root {
     position: relative;
-    height: 93vh;
-    width: calc(100% - 10vw);
-    padding: 7vh 5vw 0 5vw;
+    height: calc(100vh - 40px);
+    width: calc(100% - 5vw - 20px);
+    padding: 20px 5vw;
+  }
+
+  .page {
+    margin: 0;
   }
 
   #menu-open,
   #menu-close {
-    position: fixed;
-    top: 3vh;
-    right: 5vw;
+    position: absolute;
+    top: 3.5vh;
+    right: 3.5vh;
     height: 30px;
     font-size: 30px;
     padding: 5px;
@@ -234,6 +242,7 @@ ul.cols-6 li {
     animation-name: fadeIn;
     animation-duration: .5s;
     background-color: var(--menu-background-color);
+    box-shadow: 0 0 1px 1px gray;
     border-radius: 10px;
     transition: all .2s;
   }
@@ -242,23 +251,18 @@ ul.cols-6 li {
     display: block;
   }
 
-  #menu-close {
-    border-radius: 10px 10px 0 0;
-  }
-
   #menu {
     display: none;
     position: absolute;
-    height: calc(89vh + 3px - 40px);
-    width: calc(100% - 5vw - 20px);
-    padding: 20px 0;
-    top: calc(8vh + 2px);
+    height: calc(100vh - 40px);
+    width: calc(100% - 5vh);
+    top: 20px;
     left: 2.5vh;
     background-color: var(--menu-background-color);
     flex-direction: column;
     justify-content: center;
-    z-index: 900;
-    border-radius: 10px 0 10px 10px;
+    z-index: 10;
+    border-radius: 10px;
     animation-name: fadeIn;
     animation-duration: 0.5s;
     box-shadow: 0 0 1px 1px gray;
